# deployment-support

./: README.md
bcf3/: BOSI.py  MANIFEST.in  README.rst  dogfood.yaml  example.yaml  pre_request.sh  setup.cfg  setup.py  setup.yaml
bcf3.0/: example.yaml  pre_request.sh  setup.py
bcf3/bosi/: bosi.py
bcf3/bosi/lib/: bridge.py  constants.py
bcf3/bosi/scripts/: pre_request.sh
bcf3/etc/bosi_config/: config.yaml
bcf3/etc/t6/bash_template/: ubuntu_14.sh
bcf3/etc/t6/ospurge_template/: ubuntu.sh
bcf3/etc/t6/puppet_template/: ubuntu_compute.pp
bcf3/lib/: constants.py  environment.py  helper.py  membership_rule.py  node.py  rest.py
bcf3/no_ivs/bash_template/: centos_7.sh
bcf3/no_ivs/puppet_template/: centos_compute.pp  centos_neutron_server.pp
bcf3/t6/bash_template/: centos_6.sh  centos_7.sh  ubuntu_12.sh  ubuntu_14.sh
bcf3/t6/ospurge_template/: centos.sh  purge_all.sh  ubuntu.sh
bcf3/t6/puppet_template/: centos_compute.pp  centos_controller.pp  ubuntu_compute.pp  ubuntu_controller.pp
bcf3/t6/selinux_template/: centos.te
bcf3/with_ivs/bash_template/: centos_7.sh
bcf3/with_ivs/ospurge_template/: centos.py  centos.sh
bcf3/with_ivs/puppet_template/: centos_compute.pp  centos_controller.pp  centos_neutron_server.pp
cloudstack/: big_patch.py  big_patch.sh  createApi.py  example.yaml  example.yml  example_complex.yaml  readme.md  xenHost_cleanup.sh
ivs/: ivs_0.3_amd64.deb  readme.md
openstack-hao/: README  README.hl  install-bnchost.sh  install-cinder-node.sh  install-compute-node.sh  install-controller.sh  install-havana-using-puppet.sh  (+6 more)
(+132 files in other folders)
