[metadata]
name = bosi
version = 0.2.0
summary = Big Switch Networks OpenStack Installer
description-file =
    README.rst
author = Big Switch Networks
author-email = support@bigswitch.com
home-page = http://www.bigswitch.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
data_files =
    etc/bosi = etc/config/config.yaml
    etc/bosi/t6 = etc/t6/*
    etc/bosi/examples = etc/examples/example.yaml
packages =
    bosi

[global]
setup-hooks =
    pbr.hooks.setup_hook
    bosi.hooks.setup_hook

[entry_points]
console_scripts =
    bosi = bosi.bosi:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bosi/locale/bosi.pot

[compile_catalog]
directory = bosi/locale
domain = bosi

[update_catalog]
domain = bosi
output_dir = bosi/locale
input_file = bosi/locale/bosi.pot

[wheel]
universal = 1
